# xpc-autodiff-recon

./: .gitignore  LICENSE  README.md  pyproject.toml
spectral/: spectral-ct-recon.ipynb
spectral/fully3d_2025/f3d_output/: figs_abstract.ipynb
spectral/fully3d_2025/f3d_output/par1/: pars.txt
spectral/fully3d_2025/f3d_output/par1/figs/: metrics.txt
src/xpc/: matdecomp.py  psf.py  recon.py  transformations.py  xscatter.py
